- new version of grottserver (0.0.9)
  - Improve error handling (stability)    
  - Add record validation (length and CRC) to eliminate invalid records
2.7.6
- Improve error handling (stability) for grottserver (0.0.10) (thanks to tabascoz)
- Option to add inverter serial to MQTT topic (thanks to @ebosveld) 
  Add  self.mqttinverterintopic = True to MQTT section of grott.ini or use  qmqttinverterintopic = "False" environmental (e.g. docker). 
2.7.7 (not fully validated/tested and documented yet!)
- Fixed some message typo's  (thanks to @markt-asf, see PR #190)
- Add support for setting multiple register (thanks to @markt-asf, see PR #191), 
- Add an inverter serial <-> inverter type map thanks to @markt-asf, see PR #169)
  Be aware should only be used if no Energy Meter is used and only with new (updated) inverter/datalogger types! Will be available for everbody in a next release!
- Add Extension plugin for HA native integration (thanks to @egguy, see PR #203)
- Do not run the Grott service as root (thanks to phavekes, see PR #195)
  Needs some additional documentation !!!!!!
 - Add PvOutput limit to limit Configurable (via grott.ini) PvOut upload limit (in minutes) (thanks to @githubDante, see PR 202/237) 
2.7.8 (promoted to master)
- grottserver 0.0.12. Fixes to support "older" inverter/datalogger configurations (using "02" protocol). 
2.8.0 (New beta, 2.7.8. promoted to master)
2.8.1 
- added first SPA support 
- increase hardcoded register limit from 1024 to 4096
2.8.2 
- added first MIN support 
- added some field to SPA layout 
- fix bug with gverbose environment (see pr: #304)
- fix bug in devider for batery SOC (see pr: #305)
2.8.3 
- Removed space at the end of epvtotal and epv1today keywords in min layout (#481)
- Changed bms_batterycurr in MIN layout to numx (issue #362)
- Add gpvuplimit environmental for limiting pvoutpy writes in docker container (#346), be ware need new docker image 2.8.3 (will be created in next gen)